Patch to bypass access on file download token

--- a/composer.json
+++ b/composer.json
@@ -227,7 +227,8 @@
                 "PHP fatal error, SimilarTermsArgument::query() must be compatible with NumericArgument": "https://www.drupal.org/files/issues/query_4.patch"
             },
             "drupal/file_entity": {
-                "Add htmlspecialchars processing to core file entity link download formatter": "web/patches/file_download_formatter_htmlspecialchars.patch"
+                "Add htmlspecialchars processing to core file entity link download formatter": "web/patches/file_download_formatter_htmlspecialchars.patch",
+                "Remove access checking on download link token": "web/patches/bypass_file_download_access_token.patch"
             },
             "drupal/viewfield": {
                 "Display missing view instead of title in viewfield": "web/patches/missing_view_in_viewfield.patch"
