SEt up of better path aliases and xml sitemap

--- a/config/sync/core.entity_view_display.paragraph.member.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.member.default.yml
@@ -20,7 +20,7 @@ content:
     label: hidden
     settings:
       timezone_override: ''
-      date_format: 'M Y'
+      date_format: U
     third_party_settings:
       ds:
         ft:
