--- a/config/sync/pathauto.pattern.node_event.yml
+++ b/config/sync/pathauto.pattern.node_event.yml
@@ -7,16 +7,16 @@ dependencies:
 id: node_event
 label: 'Content - Archive Event'
 type: 'canonical_entities:node'
-pattern: 'events/[node:field_event_type]/[node:created:custom:Y-m]/[node:title]'
+pattern: 'events/[node:field_event_type:entity:name]/[node:created:custom:Y-m]/[node:title]'
 selection_criteria:
-  34fb3ad2-35e2-4f96-9965-49de1f334032:
+  8fc29154-f3d4-4f7f-8773-bee8121887a8:
     id: node_type
     bundles:
       event: event
     negate: false
     context_mapping:
       node: node
-    uuid: 34fb3ad2-35e2-4f96-9965-49de1f334032
+    uuid: 8fc29154-f3d4-4f7f-8773-bee8121887a8
 selection_logic: and
 weight: -10
 relationships: {  }
