--- a/config/sync/pathauto.pattern.node_article.yml
+++ b/config/sync/pathauto.pattern.node_article.yml
@@ -8,24 +8,24 @@ dependencies:
 id: node_article
 label: 'Content - News and Stories'
 type: 'canonical_entities:node'
-pattern: 'news/[node:field_article_type:entity:parents:join-path]/[node:field_article_type]/[node:created:custom:Y-m]/[node:title]'
+pattern: 'news/[node:field_article_type:entity:parents:join-path]/[node:field_article_type:entity:name]/[node:created:custom:Y-m]/[node:title]'
 selection_criteria:
-  d0b4dc8f-caf6-4936-a0f6-2235c4913fcf:
+  ef8927ac-f630-45eb-94b4-d6c364e54e42:
     id: node_type
     bundles:
       article: article
     negate: false
     context_mapping:
       node: node
-    uuid: d0b4dc8f-caf6-4936-a0f6-2235c4913fcf
-  cc38f9e5-a468-4bbd-9f0c-b498787d73ed:
+    uuid: ef8927ac-f630-45eb-94b4-d6c364e54e42
+  2ed842c9-9ce1-4529-b7b7-cadfd925cd51:
     id: language
     langcodes:
       en: en
     negate: false
     context_mapping:
       language: 'node:langcode:language'
-    uuid: cc38f9e5-a468-4bbd-9f0c-b498787d73ed
+    uuid: 2ed842c9-9ce1-4529-b7b7-cadfd925cd51
 selection_logic: and
 weight: -9
 relationships:
