Redo master-7rqtwti-gcaqeen3me7bi.eu-2.platformsh.site

--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -32,6 +32,10 @@
   type: redirect
   to: "https://{default}/"
 
+"http://master-7rqtwti-gcaqeen3me7bi.eu-2.platformsh.site/":
+  type: redirect
+  to: "https://{default}/"
+
 "https://master-7rqtwti-gcaqeen3me7bi.eu-2.platformsh.site/":
   type: redirect
   to: "https://{default}/"
