--- a/config/sync/facets.facet.publication_type.yml
+++ b/config/sync/facets.facet.publication_type.yml
@@ -1,4 +1,4 @@
-uuid: 32404b1e-bbf7-4c32-92fc-94300865e0e8
+uuid: 97f2c9eb-a7f9-40cb-9252-4d9aae144d01
 langcode: en
 status: true
 dependencies:
@@ -7,13 +7,13 @@ dependencies:
     - views.view.search
   module:
     - search_api
-id: news_type
-name: 'News type'
-url_alias: news_type
+id: publication_type
+name: 'Publication type'
+url_alias: publication
 weight: 0
 min_count: 1
 show_only_one_result: false
-field_identifier: field_article_type
+field_identifier: field_publication_type
 facet_source_id: 'search_api:views_page__search__page_1'
 widget:
   type: links
@@ -34,12 +34,12 @@ hard_limit: 0
 exclude: false
 only_visible_when_facet_source_is_visible: true
 processor_configs:
-  term_weight_widget_order:
-    processor_id: term_weight_widget_order
+  display_value_widget_order:
+    processor_id: display_value_widget_order
     weights:
-      sort: 60
+      sort: 40
     settings:
-      sort: DESC
+      sort: ASC
   translate_entity:
     processor_id: translate_entity
     weights:
