--- a/config/sync/search_api.index.site_search.yml
+++ b/config/sync/search_api.index.site_search.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.storage.node.field_event_type
     - field.storage.node.field_ipu_structure
     - field.storage.node.field_article_type
+    - field.storage.node.field_publication_type
     - field.storage.node.field_theme
     - search_api.server.database
     - core.entity_view_mode.node.full
@@ -81,6 +82,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_ipu_structure
+  field_publication_type:
+    label: 'Publication type'
+    datasource_id: 'entity:node'
+    property_path: field_publication_type
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_publication_type
   field_theme:
     label: Theme
     datasource_id: 'entity:node'
