Re-add grouping of countries to view.

--- a/config/sync/views.view.countries.yml
+++ b/config/sync/views.view.countries.yml
@@ -60,7 +60,11 @@ display:
       style:
         type: html_list
         options:
-          grouping: {  }
+          grouping:
+            -
+              field: name_1
+              rendered: true
+              rendered_strip: false
           row_class: ''
           default_row_class: true
           type: ul
