--- a/config/sync/core.base_field_override.paragraph.data_point.status.yml
+++ b/config/sync/core.base_field_override.paragraph.data_point.status.yml
@@ -11,7 +11,7 @@ bundle: data_point
 label: Publié
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value:
   -
     value: 1
