--- a/config/sync/field.field.paragraph.carousel_slides.field_slide.yml
+++ b/config/sync/field.field.paragraph.carousel_slides.field_slide.yml
@@ -20,7 +20,7 @@ bundle: carousel_slides
 label: Slide
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
