--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -47,6 +47,9 @@ build:
 hooks:
     build: |
         curl -sS https://platform.sh/cli/installer | php
+        cd web/themes/ipu
+        npm install
+        npm run production
     # The deploy hook runs after your application has been deployed and started.
     deploy: |
         set -e
