--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -58,6 +58,7 @@ hooks:
         drush -y cache-rebuild
         drush -y updatedb
         drush -y config-import
+        drush -y config-set file_entity.settings allow_insecure_download 1
 
 # The configuration of app when it is exposed to the web.
 web:
