--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "drupal/bootstrap_layouts": "^5.1",
         "drupal/bootstrap_sass": "^1.9",
         "drupal/bootstrap_simple_carousel": "^1.2",
+        "drupal/captcha": "^1.0@beta",
         "drupal/chosen": "^2.7",
         "drupal/coffee": "^1.0@beta",
         "drupal/colorbox": "^1.4",
@@ -107,6 +108,7 @@
         "drupal/pathologic": "^1.0@alpha",
         "drupal/pdfpreview": "^1.0@RC",
         "drupal/radix": "4.x-dev",
+        "drupal/recaptcha": "^2.4",
         "drupal/redirect": "^1.3",
         "drupal/redis": "^1.1",
         "drupal/roleassign": "^1.0@alpha",
