--- a/config/sync/core.entity_form_display.paragraph.ipu_event_document.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.ipu_event_document.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.paragraph.ipu_event_document.field_event_document_title
     - field.field.paragraph.ipu_event_document.field_original_fc_id
     - field.field.paragraph.ipu_event_document.field_outcome
+    - field.field.paragraph.ipu_event_document.field_persistent
     - field.field.paragraph.ipu_event_document.field_publication_language
     - field.field.paragraph.ipu_event_document.field_speech
     - paragraphs.paragraphs_type.ipu_event_document
@@ -32,7 +33,7 @@ content:
     third_party_settings: {  }
     region: content
   field_event_document_description:
-    weight: 5
+    weight: 6
     type: string_textarea
     settings:
       rows: 3
@@ -48,7 +49,14 @@ content:
     third_party_settings: {  }
     region: content
   field_outcome:
-    weight: 4
+    weight: 5
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_persistent:
+    weight: 3
     settings:
       display_label: true
     third_party_settings: {  }
@@ -61,14 +69,14 @@ content:
     type: options_select
     region: content
   field_speech:
-    weight: 3
+    weight: 4
     type: boolean_checkbox
     settings:
       display_label: true
     third_party_settings: {  }
     region: content
   translation:
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
