--- a/config/sync/media.type.remote_video.yml
+++ b/config/sync/media.type.remote_video.yml
@@ -12,8 +12,6 @@ queue_thumbnail_downloads: false
 new_revision: false
 source_configuration:
   thumbnails_directory: 'public://oembed_thumbnails'
-  providers:
-    - YouTube
-    - Vimeo
+  providers: {  }
   source_field: field_media_oembed_video
 field_map: {  }
