--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.article.field_place_of_publication
     - field.field.node.article.field_tags
     - field.field.node.article.field_theme
+    - field.field.node.article.field_video
     - node.type.article
   module:
     - ds
@@ -22,6 +23,7 @@ dependencies:
     - responsive_image
     - text
     - user
+    - video_embed_field
 third_party_settings:
   ds:
     layout:
@@ -173,6 +175,17 @@ content:
       responsive_image_style: ''
       image_link: ''
     third_party_settings: {  }
+  field_video:
+    weight: 7
+    label: above
+    settings:
+      responsive: true
+      width: 854
+      height: 480
+      autoplay: true
+    third_party_settings: {  }
+    type: video_embed_field_video
+    region: content
 hidden:
   field_image: true
   field_ipu_structure: true
