--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.node.article.field_place_of_publication
     - field.field.node.article.field_tags
     - field.field.node.article.field_theme
+    - field.field.node.article.field_video
     - node.type.article
     - responsive_image.styles.wide
   module:
@@ -23,6 +24,7 @@ dependencies:
     - responsive_image
     - text
     - user
+    - video_embed_field
 third_party_settings:
   ds:
     layout:
@@ -52,6 +54,7 @@ third_party_settings:
         - field_media_image
         - field_caption
       right:
+        - field_video
         - body
       footer:
         - group_related
@@ -118,7 +121,7 @@ third_party_settings:
       children:
         - 'dynamic_block_field:node-related_news_and_stories'
       parent_name: ''
-      weight: 5
+      weight: 6
       format_type: html_element
       format_settings:
         id: ''
@@ -141,7 +144,7 @@ mode: full
 content:
   body:
     label: hidden
-    weight: 4
+    weight: 5
     type: text_default
     settings: {  }
     third_party_settings: {  }
@@ -171,6 +174,25 @@ content:
       image_link: ''
     third_party_settings:
       ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_video:
+    type: video_embed_field_video
+    weight: 4
+    region: right
+    label: hidden
+    settings:
+      responsive: true
+      width: 854
+      height: 480
+      autoplay: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
         ft:
           id: default
           settings:
