--- a/config/sync/ds.field.related_news_and_stories.yml
+++ b/config/sync/ds.field.related_news_and_stories.yml
@@ -12,8 +12,7 @@ properties:
     label_display: visible
     views_label: ''
     items_per_page: none
-    context_mapping:
-      tid: '@taxonomy_term.taxonomy_term_route_context:taxonomy_term'
+    context_mapping: {  }
 type: block
 type_label: 'Block field'
 entities:
