--- a/config/sync/field.field.node.article.field_video.yml
+++ b/config/sync/field.field.node.article.field_video.yml
@@ -19,7 +19,7 @@ bundle: article
 label: Video
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
