--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -12,10 +12,6 @@
       # Base the cache on the session cookie and custom Drupal cookies. Ignore all other cookies.
       cookies: ['/^SS?ESS/', '/^Drupal.visitor/']
 
-"https://www.{default}/":
-    type: redirect
-    to: "https://{default}/"
-
 "http://ipu.org/":
   type: redirect
   to: "https://{default}/"
@@ -23,6 +19,8 @@
 "https://ipu.org/":
   type: redirect
   to: "https://{default}/"
+
+# www.ipu.org is processed automatically
 
 "http://beta.ipu.org/":
   type: redirect
