--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "cweagans/composer-patches": "^1.6.5",
         "drupal-composer/drupal-scaffold": "^2.5",
         "drupal/address": "^1.6",
+        "drupal/addtoany": "^1.12",
         "drupal/admin_toolbar": "^1.26",
         "drupal/admin_toolbar_content_languages": "^1.0@beta",
         "drupal/adminimal_admin_toolbar": "^1.9",
