--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -2,6 +2,7 @@ module:
   action: 0
   actions_permissions: 0
   address: 0
+  addtoany: 0
   admin_toolbar: 0
   admin_toolbar_content_languages: 0
   admin_toolbar_tools: 0
