--- a/config/sync/user.role.product_owner.yml
+++ b/config/sync/user.role.product_owner.yml
@@ -98,6 +98,7 @@ permissions:
   - 'delete terms in 8'
   - 'delete terms in 9'
   - 'display admin pages in another language'
+  - 'display eu cookie compliance popup'
   - 'download any audio files'
   - 'download any document files'
   - 'download any image files'
