--- a/config/sync/user.role.writer.yml
+++ b/config/sync/user.role.writer.yml
@@ -34,6 +34,7 @@ permissions:
   - 'delete own section_page content'
   - 'delete own video files'
   - 'display admin pages in another language'
+  - 'display eu cookie compliance popup'
   - 'download any audio files'
   - 'download any document files'
   - 'download any image files'
