--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -11,6 +11,7 @@ is_admin: false
 permissions:
   - 'access content'
   - 'access mailchimp signup pages'
+  - 'display eu cookie compliance popup'
   - 'download any audio files'
   - 'download any document files'
   - 'download any image files'
