--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -11,6 +11,7 @@ is_admin: false
 permissions:
   - 'access content'
   - 'access mailchimp signup pages'
+  - 'display eu cookie compliance popup'
   - 'use text format filtered_html'
   - 'use text format full_html'
   - 'view files'
