--- a/config/sync/context.context.parliament_pages.yml
+++ b/config/sync/context.context.parliament_pages.yml
@@ -7,7 +7,7 @@ dependencies:
     - system
 name: parliament_pages
 label: 'Parliament pages'
-group: null
+group: 'Menu path'
 description: 'Add country pages to Parliaments menu item'
 requireAllConditions: false
 disabled: false
@@ -30,4 +30,4 @@ reactions:
     breadcrumbs: 1
     breadcrumb_title: 1
     uuid: f4f335b0-d1b6-4ebe-8aaa-da721e1722c7
-weight: 0
+weight: -1
