--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -122,6 +122,7 @@ module:
   menu_link_attributes: 0
   menu_ui: 0
   metatag: 0
+  metatag_facebook: 0
   metatag_open_graph: 0
   metatag_open_graph_products: 0
   metatag_twitter_cards: 0
