--- a/config/sync/metatag.metatag_defaults.node.yml
+++ b/config/sync/metatag.metatag_defaults.node.yml
@@ -7,14 +7,19 @@ _core:
 id: node
 label: Content
 tags:
-  canonical_url: '[node:url]'
+  canonical_url: '[current-page:url]'
   content_language: '[node:langcode]'
   description: '[node:summary]'
-  image_src: '[node:field_media_image]'
+  image_src: '[node:field_media_image:large_cropped]'
   title: '[node:title] | [site:name]'
   og_description: '[node:summary]'
   og_image: '[node:field_media_image:large]'
   og_site_name: '[site:name]'
-  og_title: '[node:title][node:title]'
+  og_title: '[node:title]'
   og_type: '[node:content-type]'
   og_url: '[current-page:url]'
+  twitter_cards_image: '[node:field_media_image:large]'
+  twitter_cards_page_url: '[current-page:url]'
+  twitter_cards_site: '@ipuparliament'
+  twitter_cards_title: '[node:title]'
+  twitter_cards_type: summary_large_image
