--- a/composer.json
+++ b/composer.json
@@ -93,6 +93,7 @@
         "drupal/media_entity_browser": "^2.0",
         "drupal/menu_admin_per_menu": "^1.0",
         "drupal/menu_block": "1.5",
+        "drupal/menu_breadcrumb": "^1.11",
         "drupal/menu_link_attributes": "^1.0",
         "drupal/metatag_twitter_cards": "^1.8",
         "drupal/metatag_verification": "^1.8",
