--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -119,6 +119,7 @@ module:
   media_entity_browser_media_library: 0
   media_library: 0
   menu_block: 0
+  menu_breadcrumb: 0
   menu_link_attributes: 0
   menu_ui: 0
   metatag: 0
