--- a/config/sync/views.view.taxonomy_term.yml
+++ b/config/sync/views.view.taxonomy_term.yml
@@ -74,29 +74,33 @@ display:
       sorts:
         sticky:
           id: sticky
-          table: taxonomy_index
+          table: node_field_data
           field: sticky
-          order: DESC
-          plugin_id: standard
           relationship: none
           group_type: group
           admin_label: ''
+          order: DESC
           exposed: false
           expose:
             label: ''
-        created:
-          id: created
-          table: taxonomy_index
+          entity_type: node
+          entity_field: sticky
+          plugin_id: standard
+        created_1:
+          id: created_1
+          table: node_field_data
           field: created
-          order: DESC
-          plugin_id: date
           relationship: none
           group_type: group
           admin_label: ''
+          order: DESC
           exposed: false
           expose:
             label: ''
           granularity: second
+          entity_type: node
+          entity_field: created
+          plugin_id: date
       arguments:
         tid:
           id: tid
