--- a/config/sync/views.view.publications.yml
+++ b/config/sync/views.view.publications.yml
@@ -921,6 +921,7 @@ display:
         - 'config:core.entity_view_display.node.section_page.slide'
         - 'config:core.entity_view_display.node.section_page.teaser'
         - 'config:core.entity_view_display.node.vacancy.default'
+        - 'config:core.entity_view_display.node.vacancy.full'
         - 'config:core.entity_view_display.node.vacancy.teaser'
         - 'config:core.entity_view_display.node.webform.default'
         - 'config:core.entity_view_display.node.webform.teaser'
@@ -1648,6 +1649,7 @@ display:
         - 'config:core.entity_view_display.node.section_page.slide'
         - 'config:core.entity_view_display.node.section_page.teaser'
         - 'config:core.entity_view_display.node.vacancy.default'
+        - 'config:core.entity_view_display.node.vacancy.full'
         - 'config:core.entity_view_display.node.vacancy.teaser'
         - 'config:core.entity_view_display.node.webform.default'
         - 'config:core.entity_view_display.node.webform.teaser'
@@ -2219,6 +2221,7 @@ display:
         - 'config:core.entity_view_display.node.section_page.slide'
         - 'config:core.entity_view_display.node.section_page.teaser'
         - 'config:core.entity_view_display.node.vacancy.default'
+        - 'config:core.entity_view_display.node.vacancy.full'
         - 'config:core.entity_view_display.node.vacancy.teaser'
         - 'config:core.entity_view_display.node.webform.default'
         - 'config:core.entity_view_display.node.webform.teaser'
