Update email addresses from the site, and for contact form and update notifications.

--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -1,6 +1,6 @@
 uuid: 1aedb61b-ccae-47db-b9e4-d50003d8639a
 name: 'Inter-Parliamentary Union'
-mail: peter@wearepotential.org
+mail: web@ipu.org
 slogan: 'For democracy. For everyone.'
 page:
   403: /
