--- a/config/sync/core.entity_view_display.node.event.full.yml
+++ b/config/sync/core.entity_view_display.node.event.full.yml
@@ -65,49 +65,57 @@ third_party_settings:
             attributes: ''
     regions:
       top:
-        - field_document
-        - field_location
-        - field_event_date
-        - body
         - field_event_type
+        - node_title
+        - field_event_date
+        - field_location
+        - links
+      left:
         - field_event_url
+        - body
+      right:
+        - field_document
         - field_media_image
-        - langcode
+        - field_theme
         - field_country
         - field_ipu_structure
-        - field_theme
-        - links
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 1
+        label: hidden
+        formatter: default
 id: node.event.full
 targetEntityType: node
 bundle: event
 mode: full
 content:
   body:
-    label: above
-    weight: 3
+    label: hidden
+    weight: 6
     type: text_default
     settings: {  }
     third_party_settings: {  }
-    region: top
+    region: left
   field_country:
     type: entity_reference_label
-    weight: 9
-    region: top
-    label: above
+    weight: 10
+    region: right
+    label: inline
     settings:
       link: true
     third_party_settings: {  }
   field_document:
     label: above
-    weight: 0
+    weight: 7
     type: file_download_link
     settings:
       access_message: 'You don''t have access to download this file.'
       text: 'Download [file:name]'
     third_party_settings: {  }
-    region: top
+    region: right
   field_event_date:
-    label: above
+    label: inline
     weight: 2
     type: datetime_default
     settings:
@@ -116,15 +124,15 @@ content:
     third_party_settings: {  }
     region: top
   field_event_type:
-    label: hidden
-    weight: 4
+    label: inline
+    weight: 0
     type: entity_reference_label
     settings:
       link: true
     third_party_settings: {  }
     region: top
   field_event_url:
-    label: above
+    label: inline
     weight: 5
     type: link
     settings:
@@ -134,51 +142,44 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
-    region: top
+    region: left
   field_ipu_structure:
     type: entity_reference_label
-    weight: 10
-    region: top
-    label: above
+    weight: 11
+    region: right
+    label: inline
     settings:
       link: true
     third_party_settings: {  }
   field_location:
     label: hidden
-    weight: 1
+    weight: 3
     type: address_default
     settings: {  }
     third_party_settings: {  }
     region: top
   field_media_image:
-    label: above
-    weight: 6
+    label: hidden
+    weight: 8
     type: image
     settings:
       image_style: ''
       image_link: ''
     third_party_settings: {  }
-    region: top
+    region: right
   field_theme:
     type: entity_reference_label
-    weight: 11
-    region: top
-    label: above
+    weight: 9
+    region: right
+    label: inline
     settings:
       link: true
     third_party_settings: {  }
-  langcode:
-    type: language
-    weight: 8
-    region: top
-    label: above
-    settings:
-      link_to_entity: false
-      native_language: false
-    third_party_settings: {  }
   links:
-    weight: 12
+    weight: 4
     region: top
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  addtoany: true
+  langcode: true
