--- a/web/themes/ipu/package.json
+++ b/web/themes/ipu/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "RADIX_SUBTHEME_MACHINE_NAME",
-  "description": "RADIX_SUBTHEME_DESCRIPTION",
+  "name": "ipu",
+  "description": "ipu",
   "private": true,
   "scripts": {
     "postinstall": "find node_modules/ -name '*.info' -type f -delete",
