--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,5 @@
 /console/
 
 # We don't need the generated js and css as these are built on deploy
-/web/themes/ipu/assets/css
-/web/themes/ipu/assets/js
+# /web/themes/ipu/assets/css
+# /web/themes/ipu/assets/js
