--- a/config/sync/field.field.node.ipu_event.field_location.yml
+++ b/config/sync/field.field.node.ipu_event.field_location.yml
@@ -40,6 +40,8 @@ settings:
       override: optional
     dependentLocality:
       override: optional
+    locality:
+      override: optional
     administrativeArea:
       override: optional
   fields: {  }
