Update to view header for geopolitical groups lists to use translation. Required change to field used to display summary from Result to Area. Some styling updates.

--- a/config/sync/views.view.countries.yml
+++ b/config/sync/views.view.countries.yml
@@ -1195,16 +1195,19 @@ display:
           not: false
           plugin_id: numeric
       header:
-        result:
-          id: result
+        area:
+          id: area
           table: views
-          field: result
+          field: area
           relationship: none
           group_type: group
           admin_label: ''
           empty: false
-          content: '@total members'
-          plugin_id: result
+          tokenize: true
+          content:
+            value: '[view:total-rows] {{ ''members''|t }}'
+            format: full_html
+          plugin_id: text
     cache_metadata:
       max-age: -1
       contexts:
