Change event documents and programme sub-pages order to be non-translatable.

--- a/config/sync/field.field.node.ipu_event.field_agenda_order_number.yml
+++ b/config/sync/field.field.node.ipu_event.field_agenda_order_number.yml
@@ -18,7 +18,7 @@ bundle: ipu_event
 label: 'Order number'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
