--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -29,10 +29,12 @@ settings:
             - Copy
             - PasteText
             - PasteFromWord
+            - removeformat
             - Styles
         -
           name: Linking
           items:
+            - Anchor
             - DrupalLink
             - DrupalUnlink
         -
