--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -7,6 +7,7 @@ module:
   admin_toolbar_content_languages: 0
   admin_toolbar_tools: 0
   adminimal_admin_toolbar: 0
+  anchor_link: 0
   automated_cron: 0
   back_to_top: 0
   backup_migrate: 0
@@ -24,6 +25,7 @@ module:
   chosen_field: 0
   chosen_lib: 0
   ckeditor: 0
+  ckeditor_removeformat: 0
   coffee: 0
   color: 0
   colorbox: 0
